<resources>
    <string name="app_name">Fitness Travel</string>
    <string name="select_day_of_week">Select Day of Week</string>
    <string name="body_part">Body Part:</string>
    <string name="equipment">Equipment:</string>
    <string name="target">Target:</string>
    <string name="secondary">Secondary:</string>
    <string name="my_exercise_list">My Exercise List</string>
    <string name="exercise_list">Exercise List</string>
    <string name="training_list">Training List</string>
    <string name="exercise">GYM Exercise</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="body_part">
        <item>Back</item>
        <item>Cardio</item>
        <item>Chest</item>
        <item>Lower arms</item>
        <item>Lower legs</item>
        <item>Neck</item>
        <item>Shoulders</item>
        <item>Upper arms</item>
    </string-array>
    <string name="finish">FINISH</string>
    <string name="training">Training</string>
    <string name="training_date">Date</string>
    <string name="training_duration">Duration</string>
    <string name="training_day">Day</string>
    <string name="amount_of_repeat">repeat: %1$d</string>
    <string name="header_background">Header background</string>
    <string name="navigation_back">Navigation back</string>
    <string name="expand_gym_exercise">Expand GYM Exercise</string>
    <string name="add_exercise_in_my_list">Add Exercise in my List</string>
    <string name="collapse_exercise_description">Collapse Exercise description</string>
    <string name="exercise_instruction">Exercise Instruction</string>
    <string name="exercise_img">Exercise Img</string>
    <string name="button_add_new_exercises_in_myexerciselist">Button Add new Exercises in MyExerciseList</string>
    <string name="start_training">Start Training</string>
    <string name="list_of_trainings">List of Trainings</string>
    <string name="remove_exercise_from_my_exercise_list">Remove exercise from my Exercise List</string>
    <string name="add_repeat_of_exercise">Add repeat of Exercise</string>
    <string name="exercise_added_toast">Exercise successfully added in Exercise list</string>
    <string name="start">Start</string>
    <string name="weight">Weight</string>
    <string name="weight_header">Weight header</string>
    <string name="repeat">Repeat</string>
    <string name="amount">Amount</string>
    <string name="total_duration">Total Duration: </string>
    <string name="repeat_amount">Repeat Amount: </string>
    <string name="avg_weight">Avg Weight:</string>
    <string name="most_popular_exercises">Most popular exercises</string>
    <string name="empty_exercise_list">Your exercise list is empty. Add new exercises by clicking the add button.</string>
    <string name="empty_training_list">Your workout list is empty. Start a new workout on the screen with a list of your exercises.</string>
    <string name="button_home">Button Home</string>
    <string name="workout_plan">WORKOUT PLAN</string>
    <string name="workout_list">WORKOUT LIST</string>
    <string name="workout_chart">Workout Chart</string>
    <string name="item_background">Item Background</string>
    <string name="home">Home</string>
    <string name="exercise_list_is_empty">Add exercises to your workout by clicking the add exercise button at the bottom of the screen.</string>

</resources>