<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.training_item.full.ItemFullFragment"
    android:paddingHorizontal="10dp"
    android:background="@drawable/exercise_item_background"
    >

    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        style="@style/MyTVHeader"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />


    <TextView
        android:id="@+id/tvWeightHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTVHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etWeight"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName"
        android:text="@string/weight"
        />

    <EditText
        android:id="@+id/etWeight"
        style="@style/MyTVValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/tvWeightHeader"
        app:layout_constraintEnd_toStartOf="@id/tvRepeatHeader"
        app:layout_constraintTop_toTopOf="@id/tvWeightHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvWeightHeader"
        android:contentDescription="@string/weight_header"
        />
    <TextView
        android:id="@+id/tvRepeatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTVHeader"
        app:layout_constraintStart_toEndOf="@id/etWeight"
        app:layout_constraintEnd_toStartOf="@id/etRepeat"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName"
        android:text="@string/repeat"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <EditText
        android:id="@+id/etRepeat"
        style="@style/MyTVValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/tvRepeatHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvWeightHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvWeightHeader"
        android:contentDescription="@string/weight_header"
        />

    <Button
        android:id="@+id/btnAddRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWeight"
        android:text="@string/start"
        />

    <TextView
        android:id="@+id/tvDurationHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddRepeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvWeightItemHeader"
        android:text="@string/training_duration"
        style="@style/MyTVValue"
        />
    <TextView
        android:id="@+id/tvWeightItemHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddRepeat"
        app:layout_constraintStart_toEndOf="@id/tvDurationHeader"
        app:layout_constraintEnd_toStartOf="@id/tvAmountItemHeader"
        android:text="@string/weight"
        style="@style/MyTVValue"
        />
    <TextView
        android:id="@+id/tvAmountItemHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddRepeat"
        app:layout_constraintStart_toEndOf="@id/tvWeightItemHeader"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/amount"
        style="@style/MyTVValue"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrainingItemList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAmountItemHeader"
        />

</androidx.constraintlayout.widget.ConstraintLayout>