<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/exercise_item_background"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/buttonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/remove_exercise_from_my_exercise_list"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineMiddleVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/tvBodyPartHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/body_part"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />
    <TextView
        android:id="@+id/tvEquipmentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBodyPartHeader"
        android:text="@string/equipment"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:id="@+id/tvBodyPartValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tvBodyPartHeader"
        app:layout_constraintEnd_toEndOf="@id/guidlineMiddleVertical"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        />
    <TextView
        android:id="@+id/tvEquipmentValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tvEquipmentHeader"
        app:layout_constraintEnd_toEndOf="@id/guidlineMiddleVertical"
        app:layout_constraintTop_toBottomOf="@id/tvBodyPartValue"
        />
    <TextView
        android:id="@+id/tvTargetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidlineMiddleVertical"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/target"
        />
    <TextView
        android:id="@+id/tvSecondaryMusclesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidlineMiddleVertical"
        app:layout_constraintTop_toBottomOf="@id/tvTargetHeader"
        android:text="@string/secondary"
        />
    <TextView
        android:id="@+id/tvTargetValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tvTargetHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        />
    <TextView
        android:id="@+id/tvSecondaryMusclesValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tvSecondaryMusclesHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTargetValue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>